@startuml
class User {
  +username: String
  +password: String
}

class TodoList {
  +user: ForeignKey(User)
  +title: String
  +created: DateTime
  +updated: DateTime
}

class TodoItem {
  +todolist: ForeignKey(TodoList)
  +title: String
  +description: String
  +completed: Boolean
  +created: DateTime
  +updated: DateTime
}

User "1" -- "*" TodoList : owns
TodoList "1" -- "*" TodoItem : contains
@enduml

